# youtube-channel

./: .gitignore
03-coding-ocaml-on-vscode/hello/: .gitignore  bsconfig.json  dune  dune-project  dune.bsb  esy.json
03-coding-ocaml-on-vscode/hello/esy.lock/: index.json
05-making-crud-in-ocaml/code/: .gitignore  Makefile  crud.re  crudml.ml  dune  messages.httpie  messages.json  package.json  storage.re  storage.rei
05-making-crud-in-ocaml/code/esy.lock/: index.json
05-making-crud-in-ocaml/code/storage/: dune  storage.re
05-making-crud-in-ocaml/ocaml/: crud_finalre.re  insert_msg.ml  storage.re  storage_nodb.re  testml.ml
08-using-postgres-with-ocaml/: nc.sh
08-using-postgres-with-ocaml/code/: README.md  init.sql
08-using-postgres-with-ocaml/code/src/: storage.ml
